--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,34 @@ body {
   background-color: #fff;
   font-size: 16px;
 }
-
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-
 a {
   text-decoration: none;
 }
-
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.header-page {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.nav-header {
+  display: flex;
+  align-items: center;
+}
 .header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -22,18 +40,25 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  padding: 24px 0;
+  margin: 76px;
 }
 
 .header-logo .logo-part {
   color: #2e2f42;
 }
-
+.header-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
 .header-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
 }
 .header-link:hover,
 .header-link:focus {
@@ -41,8 +66,16 @@ a {
 }
 .address {
   font-style: normal;
+  margin-left: auto;
+}
+.address-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 .adress-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -73,6 +106,18 @@ a {
 }
 .footer-logo .footer-part {
   color: #f4f4fd;
+}
+.visually-hidden {
+   position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .banner-h {
   font-weight: 700;
