--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 .container {
-  width: 1158px;
+  max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6, p {
   text-transform: uppercase;
   color: #4d5ae5;
   padding: 24px 0;
-  margin: 76px;
+  margin-right: 76px;
 }
 
 .header-logo .logo-part {
@@ -119,6 +119,10 @@ h1, h2, h3, h4, h5, h6, p {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.banner-container {
+  display: flex;
+  align-items: center;
+}
 .banner-h {
   font-weight: 700;
   font-size: 56px;
@@ -126,6 +130,7 @@ h1, h2, h3, h4, h5, h6, p {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  padding: 188px ;
 }
 .banner-button {
   cursor: pointer;
