--- a/css/styles.css
+++ b/css/styles.css
@@ -114,12 +114,14 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  padding-bottom: 16px;
-  display: block;
+  margin-bottom: 16px;
+  display: inline-block;
 }
 .footer-logo .footer-part {
   color: #f4f4fd;
 }
+
+/* HERO */
 .visually-hidden {
    position: absolute;
   width: 1px;
@@ -132,11 +134,9 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.banner-top{
+.banner {
   padding-top: 188px;
-  padding-bottom: 48px;
-  width: 496px;
-margin: 0 auto;
+  padding-bottom: 188px;
 }
 .banner-h {
   font-weight: 700;
@@ -145,6 +145,10 @@ margin: 0 auto;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
+
 }
 .banner-button {
   cursor: pointer;
@@ -156,16 +160,25 @@ margin: 0 auto;
   color: #fff;
   border-radius: 4px;
   padding: 16px 32px;
+  border: none;
+  display: block;
+  text-align: center;
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
 }
 .banner-button:hover,
 .banner-button:focus {
   background: #404bbf;
 }
-.button {
+/* .button {
   display: block;
   text-align: center;
-  padding-bottom: 188px;
-}
+  min-width: 169px;
+  height: 56px;
+} */
+
+ /* SECTION A */
 .capabilities {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -177,16 +190,13 @@ margin: 0 auto;
 .capabilities-item {
   width: calc((100% - 72px) / 4);
 }
+
+/* SECTION B */
 .name {
   background: #f4f4fd;
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.portfolio {
-  padding-top: 92px;
-  padding-bottom: 107px;
-}
-
 .name-section {
   text-transform: capitalize;
   font-weight: 700;
@@ -201,7 +211,6 @@ margin: 0 auto;
   padding-top: 32px;
   padding-bottom: 32px;
   text-align: center;
-  border-radius: 0 0 4px 4px;
 }
 .names {
   text-transform: capitalize;
@@ -219,17 +228,18 @@ margin: 0 auto;
   color: #434455;
 }
 .foto-fon {
+  border-radius: 0 0 4px 4px;
   background: #fff;
   width: calc((100% - 72px) / 4);
   
 }
-.frame {
-  border-bottom: 1px solid #e7e9fc;
-border-left: 1px solid #e7e9fc;
-border-right: 1px solid #e7e9fc;
+
+/* SECTION C */
+.frame {  
 padding: 32px 16px;
-width: 360px;
 height: 120px;
+border: 1px solid #e7e9fc;
+border-top: none;
 }
 
 .name-list {
@@ -240,6 +250,13 @@ height: 120px;
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
   row-gap: 48px;
+}
+.portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
